test/corpus/aggregate_functions.txt
==================
Basic Aggregate Function
==================
DEFINE AGGREGATE FUNCTION @pure TotalSum(val: Int): Int {
  STATE [total: Int = 0];
  ACCUMULATE [total = total + val];
  FINALIZE total;
};
---
(source_file
  (statement
    (definition_statement
      (aggregate_function_definition
        (decorator)
        (identifier)
        (parameter
          (identifier)
          (type (identifier)))
        (type (identifier))
        (state_clause
          (identifier)
          (type (identifier))
          (expression (primary_expression (literal (number)))))
        (accumulate_clause
          (identifier)
          (expression
            (binary_expression
              (expression (primary_expression (identifier)))
              (expression (primary_expression (identifier))))))
        (finalize_clause
          (expression (primary_expression (identifier))))))))

==================
Aggregate Function Two State Slots
==================
DEFINE AGGREGATE FUNCTION @pure WeightedAvg(val: Float, weight: Float): Float {
  STATE [
    total_weighted: Float = 0.0,
    total_weight: Float = 0.0
  ];
  ACCUMULATE [
    total_weighted = total_weighted + val * weight,
    total_weight = total_weight + weight
  ];
  FINALIZE total_weighted;
};
---
(source_file
  (statement
    (definition_statement
      (aggregate_function_definition
        (decorator)
        (identifier)
        (parameter (identifier) (type (identifier)))
        (parameter (identifier) (type (identifier)))
        (type (identifier))
        (state_clause
          (identifier)
          (type (identifier))
          (expression (primary_expression (literal (number))))
          (identifier)
          (type (identifier))
          (expression (primary_expression (literal (number)))))
        (accumulate_clause
          (identifier)
          (expression
            (binary_expression
              (expression (primary_expression (identifier)))
              (expression
                (binary_expression
                  (expression (primary_expression (identifier)))
                  (expression (primary_expression (identifier)))))))
          (identifier)
          (expression
            (binary_expression
              (expression (primary_expression (identifier)))
              (expression (primary_expression (identifier))))))
        (finalize_clause
          (expression (primary_expression (identifier))))))))
