test/corpus/aggregation_tests.txt
==================
Aggregation COUNT Star
==================
MATCH (p:Person)
RETURN COUNT(*) AS total;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (star_arg))))
            (identifier)))))))

==================
Aggregation COUNT Expr
==================
MATCH (p:Person)
RETURN COUNT(p.email) AS withEmail;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier)))))))

==================
Aggregation SUM AVG MIN MAX
==================
MATCH (p:Person)
RETURN
    SUM(p.salary) AS totalSalary,
    AVG(p.salary) AS avgSalary,
    MIN(p.salary) AS minSalary,
    MAX(p.salary) AS maxSalary;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier)))))))

==================
Aggregation COLLECT
==================
MATCH (p:Person)
RETURN p.department, COLLECT(p.name) AS members
GROUP BY p.department;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier)))))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (group_by_clause
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier))))))))))

==================
Aggregation COLLECT_DISTINCT
==================
MATCH (p:Person)
RETURN COLLECT_DISTINCT(p.department) AS departments;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier)))))))

==================
Aggregation STRING_AGG
==================
MATCH (p:Person)
RETURN p.team, STRING_AGG(p.name, ", ") AS teamMembers
GROUP BY p.team;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier)))))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier))))
                  (expression
                    (primary_expression
                      (literal
                        (string)))))))
            (identifier))
          (group_by_clause
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier))))))))))

==================
Aggregation BOOL_AND BOOL_OR
==================
MATCH (p:Person)
RETURN
    BOOL_AND(p.active) AS allActive,
    BOOL_OR(p.verified) AS anyVerified;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier)))))))

==================
Aggregation User Defined
==================
MATCH (p:Person)
RETURN p.department, WeightedAvg(p.salary, p.performance_score) AS wAvg
GROUP BY p.department;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier)))))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier))))
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier))
          (group_by_clause
            (expression
              (primary_expression
                (member_access
                  (expression
                    (primary_expression
                      (identifier)))
                  (identifier))))))))))

==================
Role Collection Aggregation
==================
MATCH (c:Commute)
RETURN c, COUNT(c.passengers) AS passengerCount;
---

(source_file
  (statement
    (query_statement
      (query_clause
        (match_clause
          (pattern
            (identifier)
            (identifier))))
      (query_clause
        (return_clause
          (return_entry
            (expression
              (primary_expression
                (identifier))))
          (return_entry
            (expression
              (primary_expression
                (function_call
                  (identifier)
                  (expression
                    (primary_expression
                      (member_access
                        (expression
                          (primary_expression
                            (identifier)))
                        (identifier)))))))
            (identifier)))))))
