test/corpus/alter_and_migrate.txt
==================
Alter Node Add Field Ref
==================
ALTER NODE Person { ADD middle_name };
---
(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (block
          (var_decl
            (identifier)))))))

; NOTE: ALTER NODE uses a scripting `block` in this grammar. The `ADD` keyword
; inside a block may not parse correctly without grammar extension. Verify with
; `tree-sitter parse`.

==================
Alter Schema Add Node
==================
ALTER SCHEMA Family [
  ADD Employee
];
---
(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_schema_entry
          (identifier))))))

==================
Alter Schema Rename
==================
ALTER SCHEMA Family [
  RENAME OldName TO NewName
];
---
(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_schema_entry
          (identifier)
          (identifier))))))

==================
Alter Schema Drop
==================
ALTER SCHEMA Family [
  DROP OldField
];
---
(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_schema_entry
          (identifier))))))

==================
Migrate Node Type
==================
MIGRATE p TO Employee MAP { name = full_name } DEFAULTS { role = "staff" };
---
(source_file
  (statement
    (mutation_statement
      (migrate_statement
        (identifier)
        (identifier)
        (object_literal
          (identifier)
          (expression (primary_expression (identifier))))
        (object_literal
          (identifier)
          (expression (primary_expression (literal (string)))))))))

==================
Validate Migration
==================
VALIDATE MIGRATION p TO Employee;
---
(source_file
  (statement
    (mutation_statement
      (migrate_statement
        (identifier)
        (identifier)))))

==================
Alter Namespace Strict Permissions
==================
ALTER NAMESPACE Core SET STRICT_PERMISSIONS ON;
---
(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)))))
