test/corpus/alter_edge_tests.txt
==================
Alter Edge Add Field Level 1
==================
ALTER EDGE Employment ADD contract_type;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_ops
          (alter_entry
            (identifier)))))))

==================
Alter Edge Drop Field Level 1
==================
ALTER EDGE Drives DROP insurance_number;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_ops
          (alter_entry
            (identifier)))))))

==================
Alter Edge Batch Ops Level 2
==================
ALTER EDGE Employment [
    ADD contract_type,
    DROP old_notes,
    RENAME wage TO salary
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_ops
          (alter_entry
            (identifier))
          (alter_entry
            (identifier))
          (alter_entry
            (identifier)
            (identifier)))))))

==================
Alter Edge Multiple Types Level 3
==================
ALTER EDGE [
    Employment [ADD contract_type, DROP legacy],
    Drives ADD mileage_at_start
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (identifier)
        (alter_ops
          (alter_entry
            (identifier))
          (alter_entry
            (identifier)))
        (identifier)
        (alter_ops
          (alter_entry
            (identifier)))))))
