test/corpus/alter_field_tests.txt
==================
Alter Field Set Type Level 1
==================
ALTER FIELD age SET TYPE Float;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (type
                (identifier)))))))))

==================
Alter Field Add Decorator Level 1
==================
ALTER FIELD email ADD @index;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (decorator))))))))

==================
Alter Field Drop Decorator Level 1
==================
ALTER FIELD email DROP @index;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (decorator))))))))

==================
Alter Field Set Default Level 1
==================
ALTER FIELD score SET DEFAULT 0;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (expression
                (primary_expression
                  (literal
                    (number)))))))))))

==================
Alter Field Drop Default Level 1
==================
ALTER FIELD score DROP DEFAULT;
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op)))))))

==================
Alter Field Batch Ops Level 2
==================
ALTER FIELD score [
    SET TYPE Float,
    ADD @index,
    SET DEFAULT 0.0
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (type
                (identifier)))
            (alter_field_op
              (decorator))
            (alter_field_op
              (expression
                (primary_expression
                  (literal
                    (number)))))))))))

==================
Alter Field Multiple Fields Level 3
==================
ALTER FIELD [
    age SET TYPE Float,
    email [ADD @index, ADD @unique],
    score SET DEFAULT 0
];
---

(source_file
  (statement
    (mutation_statement
      (alter_statement
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (type
                (identifier)))))
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (decorator))
            (alter_field_op
              (decorator))))
        (alter_field_entry
          (identifier)
          (alter_field_ops
            (alter_field_op
              (expression
                (primary_expression
                  (literal
                    (number)))))))))))
